# airctl

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml  todo.md
airctl/: gui.py  main.py  network_manager.py
airctl/styles/: style.css
airctl/ui/: network_list.py  nm_error_widget.py
airctl/window/: actions.py  layout.py  overlay.py  window_config.py
app/: main.py  network_manager.py
app/ui/: dialog_box.py  network_info.py  network_list.py
core/: models.py  network_manager.py
core/ui/: app_header.py  dialog_box.py  network_list.py  wifi_off_widget.py
scripts/: build.sh  install.sh  uninstall.sh
styles/: style.css
