[project]
name = "airctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nmcli>=1.7.0",
    "nuitka>=2.8.10",
    "pygobject>=3.54.5",
]

[project.scripts]
airctl = "airctl.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["airctl"]

[tool.setuptools.package-data]
airctl = ["styles/*.css"]

